# sam-3d-objects

./: .gitignore  demo_simple.py  pixi.toml  pyproject.toml
notebook/: demo_single_object.ipynb  inference.py
sam3d_objects/: __init__.py  predictor.py  sam3d_config.py
sam3d_objects/model/: download.py
sam3d_objects/pipeline/: inference_pipeline_pointmap.py  layout_post_optimization_utils.py
sam3d_objects/utils/: transforms.py
