[build-system]
requires = ["setuptools>=61.0.0,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sam3d-objects"
version = "0.0.1"
description = "Lightweight SAM3D wrapper"
requires-python = ">=3.11,<3.12"
dependencies = [
  "imgviz>=2.0.0,<3",
  "tqdm==4.66.5",
  # only actual runtime deps
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sam3d_objects*"]
